// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<tabs> demo: render [basic] correctly 1`] = `
"<div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
  <!---->
  <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
    <!---->
    <div class=\\"mb-tabs-nav-tab\\">
      <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"mb-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"mb-tabs-content\\">
    <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"mb-tabs-content-item mb-tabs-content-item-active\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [editable] correctly 1`] = `
"<div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-card-gutter mb-tabs-size-medium\\">
  <!---->
  <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-card-gutter\\">
    <!---->
    <div class=\\"mb-tabs-nav-tab\\">
      <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <!---->
      </div>
      <div class=\\"mb-tabs-nav-add-btn\\"><span class=\\"mb-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-plus\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M5 24h38M24 5v38\\"></path></svg></span></div>
    </div>
    <!---->
    <div class=\\"mb-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"mb-tabs-content\\">
    <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\">Content of Tab Panel 1</div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\">Content of Tab Panel 2</div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\">Content of Tab Panel 3</div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\">Content of Tab Panel 4</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [extra] correctly 1`] = `
"<div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
  <!---->
  <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
    <!---->
    <div class=\\"mb-tabs-nav-tab\\">
      <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"mb-tabs-nav-extra\\">
      <!----><button class=\\"mb-btn mb-btn-secondary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Action
      </button>
    </div>
  </div>
  <div class=\\"mb-tabs-content\\">
    <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [icon] correctly 1`] = `
"<div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
  <!---->
  <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
    <!---->
    <div class=\\"mb-tabs-nav-tab\\">
      <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"mb-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"mb-tabs-content\\">
    <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 1 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 3 </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [lazy] correctly 1`] = `
"<div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
  <!---->
  <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
    <!---->
    <div class=\\"mb-tabs-nav-tab\\">
      <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
        <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class=\\"mb-tabs-nav-extra\\">
      <!---->
      <!---->
    </div>
  </div>
  <div class=\\"mb-tabs-content\\">
    <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
      <div class=\\"mb-tabs-content-item\\">
        <!--v-if-->
      </div>
      <div class=\\"mb-tabs-content-item mb-tabs-content-item-active\\">
        <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
      </div>
      <div class=\\"mb-tabs-content-item\\">
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [position] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"top\\"><span class=\\"mb-radio-button-content\\">Top</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"right\\"><span class=\\"mb-radio-button-content\\">Right</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"bottom\\"><span class=\\"mb-radio-button-content\\">Bottom</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"left\\"><span class=\\"mb-radio-button-content\\">Left</span></label></span></div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
      <!---->
      <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
        <!---->
        <div class=\\"mb-tabs-nav-tab\\">
          <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"mb-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"mb-tabs-content\\">
        <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<tabs> demo: render [type] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"line\\"><span class=\\"mb-radio-button-content\\">Line</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"card\\"><span class=\\"mb-radio-button-content\\">Card</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"card-gutter\\"><span class=\\"mb-radio-button-content\\">Card Gutter</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"text\\"><span class=\\"mb-radio-button-content\\">Text</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"rounded\\"><span class=\\"mb-radio-button-content\\">Rounded</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"capsule\\"><span class=\\"mb-radio-button-content\\">Capsule</span></label></span></div>
  <div class=\\"mb-space-item\\">
    <div class=\\"mb-tabs mb-tabs-horizontal mb-tabs-top mb-tabs-type-line mb-tabs-size-medium\\">
      <!---->
      <div class=\\"mb-tabs-nav mb-tabs-nav-horizontal mb-tabs-nav-top mb-tabs-nav-size-medium mb-tabs-nav-type-line\\">
        <!---->
        <div class=\\"mb-tabs-nav-tab\\">
          <div class=\\"mb-tabs-nav-tab-list\\" style=\\"transform: translateX(0px);\\">
            <div class=\\"mb-tabs-nav-ink\\" style=\\"left: 0px; width: 0px;\\"></div>
          </div>
          <!---->
        </div>
        <!---->
        <div class=\\"mb-tabs-nav-extra\\">
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"mb-tabs-content\\">
        <div class=\\"mb-tabs-content-list\\" style=\\"margin-left: -0%;\\">
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 1 </div>
          </div>
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 2 </div>
          </div>
          <div class=\\"mb-tabs-content-item\\">
            <div class=\\"mb-tabs-pane\\"> Content of Tab Panel 3 </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
